<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.andstatus.todoagenda.prefs.MultilineEditTextPreference
        android:key="widgetInstanceName"
        android:title="@string/widget_instance_name"
        android:singleLine="true" />

    <org.andstatus.todoagenda.prefs.MultilineListPreference
        android:key="textSizeScale"
        android:defaultValue="1.0"
        android:entries="@array/pref_text_size_entries"
        android:entryValues="@array/pref_text_size_values"
        android:summary="@string/appearance_text_size_desc"
        android:title="@string/appearance_text_size_title" />

    <org.andstatus.todoagenda.prefs.MultilineListPreference
        android:key="dateFormat"
        android:defaultValue="auto"
        android:entries="@array/pref_date_format_entries"
        android:entryValues="@array/pref_date_format_values"
        android:summary="@string/appearance_date_format_desc"
        android:title="@string/appearance_time_format_title" />

    <org.andstatus.todoagenda.prefs.MultilineCheckBoxPreference
        android:key="lockTimeZone"
        android:defaultValue="false"
        android:persistent="false"
        android:summary="@string/lock_time_zone_off_desc"
        android:title="@string/lock_time_zone_title" />

    <org.andstatus.todoagenda.prefs.MultilineListPreference
        android:key="snapshotMode"
        android:defaultValue="live_data"
        android:entries="@array/pref_snapshot_mode_entries"
        android:entryValues="@array/pref_snapshot_mode_values"
        android:title="@string/snapshot_mode" />

    <org.andstatus.todoagenda.prefs.MultilineEditTextPreference
        android:key="refreshPeriodMinutes"
        android:title="@string/refresh_period_minutes"
        android:singleLine="true" />

</PreferenceScreen>
