<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.andstatus.todoagenda.prefs.MultilineCheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="differentColorsForDark"
        android:summaryOff="@string/different_colors_for_dark_off_desc"
        android:summaryOn="@string/different_colors_for_dark_on_desc"
        android:title="@string/different_colors_for_dark_title" />

    <org.andstatus.todoagenda.prefs.MultilineListPreference
        android:defaultValue="auto"
        android:entries="@array/pref_text_color_source_entries"
        android:entryValues="@array/pref_text_color_source_values"
        android:key="textColorSource"
        android:summary="@string/text_color_source_auto_desc"
        android:title="@string/text_color_source" />

    <org.andstatus.todoagenda.prefs.MultilineListPreference
        android:defaultValue="no"
        android:entries="@array/pref_text_shadow_entries"
        android:entryValues="@array/pref_text_shadow_values"
        android:key="textShadow"
        android:title="@string/text_shadow_title" />

    <PreferenceCategory app:title="@string/widget_header">
        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="DARK"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="headerTheme"
            android:title="@string/appearance_header_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#9AFFFFFF"
            android:key="widgetHeaderTextColor"
            android:title="@string/widget_header_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#00000000"
            android:key="widgetHeaderBackgroundColor"
            android:summary="@string/widget_header_background_color_desc"
            android:title="@string/appearance_background_color_title"
            app:colorpicker_selectNoneButtonText="@string/default_value" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="PastTime"
        app:title="@string/past_events">
        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="DARK"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="dayHeaderThemePast"
            android:title="@string/day_header_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#FFCCCCCC"
            android:key="dayHeaderTextColorPast"
            android:title="@string/day_header_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="BLACK"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="entryThemePast"
            android:title="@string/appearance_entries_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#FFFFFFFF"
            android:key="eventTextColorPast"
            android:title="@string/event_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#BF78782C"
            android:key="pastEventsBackgroundColor"
            android:title="@string/appearance_background_color_title"
            app:colorpicker_selectNoneButtonText="@string/default_value" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="OngoingTime"
        app:title="@string/ongoing_events">
        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="WHITE"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="entryThemeOngoing"
            android:title="@string/appearance_entries_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#FF000000"
            android:key="eventTextColorOngoing"
            android:title="@string/event_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#F0FFFFFF"
            android:key="ongoingEventsBackgroundColor"
            android:title="@string/appearance_background_color_title"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#F44336"
            android:key="currentTimeLineColor"
            android:title="@string/current_time_line_color_title"
            app:colorpicker_selectNoneButtonText="@string/default_value" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="TodayTime"
        app:title="@string/todays_events">
        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="LIGHT"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="dayHeaderTheme"
            android:title="@string/day_header_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#FF777777"
            android:key="dayHeaderTextColorToday"
            android:title="@string/day_header_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="WHITE"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="entryTheme"
            android:title="@string/appearance_entries_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#FF000000"
            android:key="eventTextColorToday"
            android:title="@string/event_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#DAFFFFFF"
            android:key="todaysEventsBackgroundColor"
            android:title="@string/appearance_background_color_title"
            app:colorpicker_selectNoneButtonText="@string/default_value" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="FutureTime"
        app:title="@string/future_events">

        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="DARK"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="dayHeaderThemeFuture"
            android:title="@string/day_header_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#FFCCCCCC"
            android:key="dayHeaderTextColorFuture"
            android:title="@string/day_header_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="auto"
            android:entries="@array/pref_time_until_background_source_entries"
            android:entryValues="@array/pref_time_until_background_source_values"
            android:key="timeUntilBackgroundSource"
            android:title="@string/time_until_background" />

        <org.andstatus.todoagenda.prefs.MultilineListPreference
            android:defaultValue="BLACK"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="entryThemeFuture"
            android:title="@string/appearance_entries_theme_title" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#FFFFFFFF"
            android:key="eventTextColorFuture"
            android:title="@string/event_text_color"
            app:colorpicker_selectNoneButtonText="@string/default_value" />

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="#80000000"
            android:key="backgroundColor"
            android:title="@string/appearance_background_color_title"
            app:colorpicker_selectNoneButtonText="@string/default_value" />
    </PreferenceCategory>

</PreferenceScreen>
